# opencv_make_effect_png

./: .gitignore  Blend.hpp  CMakeLists.txt  Main.cpp  README.md  main.cpp  main.cu  render.hpp  run.sh  run_cpu.sh  run_gpu.sh  setup.sh
include/: blend.hpp  protocol.hpp  util.hpp
render/: square_transition.hpp
render/square_transition/: main.hpp
render/template/: main.hpp
